[gd_scene load_steps=4 format=3 uid="uid://bsssnsrsqpssb"]

[ext_resource type="Theme" uid="uid://if0oa6qprpaj" path="res://ui/themes/dialog_box_theme.tres" id="1_jdgnu"]
[ext_resource type="Script" uid="uid://7hl2ob0sier7" path="res://ui/huds/dialog_hud/dialog_hud.gd" id="1_lp0hq"]
[ext_resource type="PackedScene" uid="uid://bsy2brcc5c7qq" path="res://ui/huds/dialog_hud/WordByWordLabel.tscn" id="2_4vrsf"]

[node name="DialogHUD" type="CanvasLayer"]
layer = 2
script = ExtResource("1_lp0hq")

[node name="TopContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jdgnu")

[node name="VBoxContainer" type="VBoxContainer" parent="TopContainer"]
layout_mode = 2
alignment = 2

[node name="Control" type="Control" parent="TopContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="DialogPanel" type="PanelContainer" parent="TopContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme = ExtResource("1_jdgnu")

[node name="MarginContainer" type="MarginContainer" parent="TopContainer/VBoxContainer/DialogPanel"]
layout_mode = 2

[node name="WordByWordLabel" parent="TopContainer/VBoxContainer/DialogPanel/MarginContainer" instance=ExtResource("2_4vrsf")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control2" type="Control" parent="TopContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
mouse_filter = 1
